# heart-rate-from-camera

./: .gitignore  01 - Predict HR from video (optional analyze wave).ipynb  01 - predict HR from video (optional: analyze wave).ipynb  01B detect with pyPPG.ipynb  02 - (optional) Read ECG detect HR, analyze wave.ipynb  02 - Read ECG detect HR, analyze wave.ipynb  04.Validation.ipynb  Makefile  Mean_error_for_each_condition.ipynb  README.md  comparing_the_fiducial_points.ipynb  delete.ipynb  face_utilities.py  pyproject.toml  requirements.txt  signal_processing.py
